--- a/project.ipynb
+++ b/project.ipynb
@@ -50,8 +50,7 @@
     "for file_ in allFiles:\n",
     "    df = pd.read_csv(file_, index_col = None, header = 1)\n",
     "    list_.append(df)\n",
-    "frame = pd.concat(list_)\n",
-    "\n"
+    "frame = pd.concat(list_)\n"
    ]
   },
   {
@@ -208,9 +207,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Logistic Regression"
    ]
@@ -821,9 +818,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Explore returns"
    ]
@@ -2144,177 +2139,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 452,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "   direc: array([[  1.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00],\n",
-       "       [  2.18050672e-01,  -1.05204787e+00,  -1.36033672e+00,\n",
-       "          3.48610992e-01,   6.87606997e-01,   4.33371162e-01,\n",
-       "         -2.59243538e-01,  -1.18038992e+01,  -1.22528165e+01,\n",
-       "          1.51986767e+01,   1.79096507e+01,   1.44671042e+01,\n",
-       "          1.00097929e+01,   5.16503151e+00,   1.11392519e+00,\n",
-       "          2.48034046e+00,   3.43258497e-01,  -1.66267366e+00,\n",
-       "         -1.77920621e+00,  -1.22793572e+00,  -2.01141252e-01],\n",
-       "       [  0.00000000e+00,   0.00000000e+00,   1.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00],\n",
-       "       [  0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          1.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00],\n",
-       "       [  0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   1.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00],\n",
-       "       [  0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   1.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00],\n",
-       "       [ -1.30781742e+00,  -1.65183568e+00,  -3.40121143e-01,\n",
-       "          1.18106896e+00,   5.04075655e-01,   4.12096566e-01,\n",
-       "          1.17410054e-01,   1.39834921e+00,  -3.05124504e+00,\n",
-       "          1.71235399e+00,  -8.19048947e+00,   8.21889946e-01,\n",
-       "         -1.19841615e+00,   2.12217171e+00,   1.25390872e+00,\n",
-       "          1.85189880e+00,   2.11180401e-01,  -7.02743311e-01,\n",
-       "         -5.68746901e-01,  -3.15458023e-01,  -3.36701958e-01],\n",
-       "       [  0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   1.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00],\n",
-       "       [  0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   1.00000000e+00],\n",
-       "       [ -2.49961378e-01,  -1.15715533e-02,   3.73118212e-02,\n",
-       "          2.93531827e-01,  -4.15872612e-02,  -3.86028288e-02,\n",
-       "         -8.34065833e-02,  -1.41256768e+00,  -4.37086956e+00,\n",
-       "         -7.31817959e+00,  -4.73233275e+00,   3.11157673e-01,\n",
-       "          2.57948523e+00,   2.06194177e+00,   2.86426561e-01,\n",
-       "          1.60163163e-01,   2.69541856e-01,  -1.06866101e-01,\n",
-       "         -1.07833341e-01,  -1.12070079e-01,  -5.97793776e-02],\n",
-       "       [  1.64956691e-01,  -9.30077503e-02,  -1.73460642e-01,\n",
-       "          5.72851766e-02,   8.00609144e-02,   3.59143757e-02,\n",
-       "         -6.74628657e-04,  -9.68021213e+00,  -1.15659500e+01,\n",
-       "         -2.78434728e+00,   1.29585720e-01,   9.63651619e-01,\n",
-       "          7.12829985e-01,  -1.59361045e-01,   4.31669247e-01,\n",
-       "          6.76219217e-01,   9.15966160e-03,  -3.04949102e-01,\n",
-       "         -2.89916475e-01,  -1.64572198e-01,  -2.89194689e-02],\n",
-       "       [  0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   1.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00],\n",
-       "       [  0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          1.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00],\n",
-       "       [  0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   1.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00],\n",
-       "       [  0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   1.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00],\n",
-       "       [  0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          1.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00],\n",
-       "       [  0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   1.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00],\n",
-       "       [  0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   1.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00],\n",
-       "       [ -9.18295740e-01,  -1.16239100e+00,  -3.07211350e-01,\n",
-       "          2.56591363e-01,   1.07614286e-01,   1.01396704e-01,\n",
-       "          6.85642907e-01,   2.62680724e+00,   7.08012076e+00,\n",
-       "         -1.45758680e+01,  -1.96564393e+00,  -9.39827443e+00,\n",
-       "         -8.25771994e+00,  -6.05794432e+00,   1.79379328e-01,\n",
-       "         -2.47535209e-01,   2.52828191e-01,  -7.39497131e-01,\n",
-       "          1.70943765e-01,   2.85980742e-01,  -2.25110400e-01],\n",
-       "       [  0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   1.00000000e+00,   0.00000000e+00],\n",
-       "       [ -3.11825237e-01,  -4.35480597e-01,  -1.01290981e-01,\n",
-       "          2.70694487e-01,  -3.10759678e-03,   1.67363794e-01,\n",
-       "          5.02285635e-01,   4.47670386e-01,   2.86929690e-01,\n",
-       "          2.60286305e+00,   7.01503219e-01,   1.81478711e+00,\n",
-       "          4.50498934e-01,  -4.37749750e+00,   2.14038912e-01,\n",
-       "          3.36031820e-01,  -1.62700286e-01,  -3.60152929e-01,\n",
-       "         -1.69857480e-01,  -2.24851393e-01,  -1.07733481e-01]])\n",
-       "     fun: 9.5390204709887012\n",
-       " message: 'Optimization terminated successfully.'\n",
-       "    nfev: 4589\n",
-       "     nit: 20\n",
-       "  status: 0\n",
-       " success: True\n",
-       "       x: array([ -7.9156901 , -13.40137424,  -2.61732067,   9.79486828,\n",
-       "         6.55941054,   3.41135732,   1.78244361, -14.61690948,\n",
-       "       -17.49711141,   6.94393657,  21.10012399,  14.41828935,\n",
-       "         6.26367987,   2.97679631,   9.67268442,  15.8655152 ,\n",
-       "         3.25466112, -10.73838889,  -7.32409157,  -3.77199771,  -1.97583584])"
-      ]
-     },
-     "execution_count": 452,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import scipy.optimize\n",
     "\n",
@@ -2643,7 +2470,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
