--- a/project.ipynb
+++ b/project.ipynb
@@ -221,9 +221,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Logistic Regression"
    ]
@@ -823,9 +821,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Explore returns"
    ]
@@ -2496,9 +2492,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Plot distribution of expected returns"
    ]
@@ -2605,9 +2599,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Separate Regressions for Each Loan Grade"
    ]
@@ -2762,6 +2754,101 @@
     "collapsed": true
    },
    "outputs": [],
+   "source": [
+    "#Bootstrapping standard errors\n",
+    "\n",
+    "from sklearn.utils import resample\n",
+    "\n",
+    "iterations = 5\n",
+    "size = int(len())\n",
+    "\n",
+    "\n",
+    "\n",
+    "for i in range(iterations):\n",
+    "    # sample data\n",
+    "    #boostrapping the training data\n",
+    "    \n",
+    "    bs_train_features = resample(train_features, n_samples = len(train_features))\n",
+    "    bs_train_labels = resample(train_labels, n_samples = len(train_labels))\n",
+    "    \n",
+    "    #bs_test_features = resample(test_features, n_samples = len(test_features))\n",
+    "    #bs_test_labels = resample(test_labels, n_samples = len(test_features))\n",
+    "    \n",
+    "\n",
+    "    #creating predicted fail rate\n",
+    "    lr = LogisticRegression()\n",
+    "    lr.fit(bs_train_features, bs_train_labels[\"bad\"])\n",
+    "    test_features['pred_fail_rate'] = lr.predict_proba(bs_test_features)[:, 1]\n",
+    "    \n",
+    "    \n",
+    "    #predicted recovery rate and expected return and variance\n",
+    "    linreg_rec_rate = sm.OLS(bs_train_labels[bs_train_labels.bad == 1][\"return\"], \n",
+    "                         sm.add_constant(bs_train_features[bs_train_labels.bad == 1])).fit()\n",
+    "    linreg_rec_rate.summary()\n",
+    "    test_features[\"pred_rec_rate\"] = linreg_rec_rate.predict(test_features.drop(\"pred_fail_rate\", 1))\n",
+    "    \n",
+    "    test_features[\"exp_R\"] = ((1 + test_features[\"int_rate_num\"]) * (1 - test_features[\"pred_fail_rate\"]) +\n",
+    "                         test_features[\"pred_rec_rate\"] * test_features[\"pred_fail_rate\"])\n",
+    "    \n",
+    "    linreg_rec_rate2 = sm.OLS(bs_train_labels[bs_train_labels.bad == 1][\"return\"] ** 2, \n",
+    "                         sm.add_constant(bs_train_features[bs_train_labels.bad == 1])).fit()\n",
+    "    linreg_rec_rate2.summary()\n",
+    "    test_features[\"pred_rec_rate2\"] = linreg_rec_rate2.predict(sm.add_constant(test_features.iloc[:,:107]))\n",
+    "\n",
+    "    test_features[\"var_R\"] = ((1 + test_features[\"int_rate_num\"])**2 * (1 - test_features[\"pred_fail_rate\"]) +\n",
+    "                         test_features[\"pred_rec_rate2\"] * test_features[\"pred_fail_rate\"] \n",
+    "                         - test_features[\"exp_R\"]**2)\n",
+    "    \n",
+    "    \n",
+    "    #expected return and variance by grade\n",
+    "    bs_train_features_no_int = bs_train_features.iloc[:, :107].drop(\"int_rate_num\", 1)\n",
+    "    test_features_no_int = test_features.iloc[:, :107].drop(\"int_rate_num\", 1)\n",
+    "\n",
+    "    for grade in [\"A\", \"B\", \"C\", \"D\", \"E\", \"F\", \"G\"]: \n",
+    "    \n",
+    "        lr_fail_rate = LogisticRegression()\n",
+    "        lr_fail_rate.fit(bs_train_features_no_int[bs_train_labels[\"grade_\" + grade] == 1], \n",
+    "                     bs_train_labels[bs_train_labels[\"grade_\" + grade] == 1][\"bad\"])\n",
+    "        test_features[\"pred_fail_rate_\" + grade] = lr_fail_rate.predict_proba(test_features_no_int)[:, 1]\n",
+    "    \n",
+    "        mask = (bs_train_labels[\"grade_\" + grade] == 1) & (bs_train_labels[\"bad\"] == 1)\n",
+    "        lr_rec_rate = sm.OLS(bs_train_labels[mask][\"return\"], sm.add_constant(bs_train_features_no_int[mask])).fit()\n",
+    "        test_features[\"pred_rec_rate_\" + grade] = lr_rec_rate.predict(test_features_no_int)\n",
+    "    \n",
+    "        lr_rec_rate2 = sm.OLS(bs_train_labels[mask][\"return\"] ** 2, sm.add_constant(bs_train_features_no_int[mask])).fit()\n",
+    "        test_features[\"pred_rec_rate2_\" + grade] = lr_rec_rate2.predict(test_features_no_int)\n",
+    "    \n",
+    "        r = np.mean(bs_train_features[bs_train_labels[\"grade_\" + grade] == 1][\"int_rate_num\"])\n",
+    "    \n",
+    "        test_features[\"exp_R_\" + grade] = ((1 + r) * (1 - test_features[\"pred_fail_rate_\" + grade]) +\n",
+    "                         test_features[\"pred_rec_rate_\" + grade] * test_features[\"pred_fail_rate_\" + grade])\n",
+    "    \n",
+    "        test_features[\"var_R_\" + grade] = ((1 + r)**2 * (1 - test_features[\"pred_fail_rate_\" + grade]) +\n",
+    "                        test_features[\"pred_rec_rate2_\" + grade] * test_features[\"pred_fail_rate_\" + grade] \n",
+    "                         - test_features[\"exp_R_\" + grade]**2)\n",
+    "    \n",
+    "    #bootstrapping test_data\n",
+    "    bs_test_features = resample(test_features, n_samples = len(test_features))\n",
+    "    bs_test_labels = resample(test_labels, n_samples = len(test_labels))\n",
+    "    \n",
+    "    \n",
+    "    results = scipy.optimize.minimize(nllh, [0,0,0], args=(bs_test_features, bs_test_labels), method='Nelder-Mead')['x']\n",
+    "    # getting betas\n",
+    "    b1.append(results[0])\n",
+    "    b2.append(results[1])\n",
+    "    b3.append(results[2])\n",
+    "\n",
+    "#standard errors\n",
+    "se_b1 = np.std(b1)\n",
+    "se_b2 = np.std(b2)\n",
+    "se_b3 = np.std(b3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -2781,7 +2868,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
