Add comparison of estimated vs actual matchings

--- a/graphs.ipynb
+++ b/graphs.ipynb
@@ -16,6 +16,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/anaconda/lib/python3.6/site-packages/statsmodels/compat/pandas.py:56: FutureWarning: The pandas.core.datetools module is deprecated and will be removed in a future version. Please use the pandas.tseries module instead.\n",
+      "  from pandas.core import datetools\n",
       "/anaconda/lib/python3.6/site-packages/IPython/core/magics/execution.py:728: DtypeWarning: Columns (0,19,55) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  exit_ignore=exit_ignore)\n",
       "/anaconda/lib/python3.6/site-packages/IPython/core/magics/execution.py:728: DtypeWarning: Columns (0,19) have mixed types. Specify dtype option on import or set low_memory=False.\n",
@@ -38,11 +40,52 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Distribution of amounts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAY0AAAD8CAYAAACLrvgBAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMi4yLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvhp/UCwAAFIRJREFUeJzt3X+s3XV9x/Hne/yyAZEictO0ZMWt\n2US6MXoHXdjMRTYoxawskQRDpCBLF4RFty6jzmw40aS6MA2Zw9TR0Tq1ImpopKw2lRu2jF9FkRYZ\n9goN1DY02IJUne7qe3+cz5XTy7n3fnruj/Nd+3wkJ+d73ufz/X7f93t67qvfH+fcyEwkSarxK71u\nQJL0/4ehIUmqZmhIkqoZGpKkaoaGJKmaoSFJqmZoSJKqGRqSpGqGhiSp2rG9bmCqnXbaaTl//vyq\nsT/60Y848cQTp7ehLjW1t6b2Bc3tral9QXN7a2pfcOT29thjj72YmW+acGBmHlG3RYsWZa3777+/\neuxMa2pvTe0rs7m9NbWvzOb21tS+Mo/c3oBtWfE71sNTkqRqhoYkqZqhIUmqZmhIkqoZGpKkaoaG\nJKmaoSFJqmZoSJKqGRqSpGpH3NeI6PDMX3XvYY1fuXCYaw5znk52rb5s0suQNPPc05AkVTM0JEnV\nDA1JUjVDQ5JUzdCQJFUzNCRJ1QwNSVI1Q0OSVM3QkCRVMzQkSdUmDI2IOCMi7o+IpyLiyYh4X6mf\nGhFbImJnuZ9d6hERt0XEUEQ8ERHnti1reRm/MyKWt9UXRcT2Ms9tERHjrUOS1Bs1exrDwMrMfAuw\nGLghIs4CVgFbM3MBsLU8BrgUWFBuK4DboRUAwM3A+cB5wM1tIXB7GTsy35JSH2sdkqQemDA0MnNv\nZn6zTL8CPAXMBZYB68qwdcDlZXoZsD5bHgJOiYg5wCXAlszcn5kHgC3AkvLcyZn5YGYmsH7Usjqt\nQ5LUA9H6PV05OGI+8ABwNvBcZp7S9tyBzJwdEV8DVmfmf5b6VuAmYAB4XWZ+pNT/FvgJMFjG/2Gp\n/wFwU2a+IyJe6rSODn2toLWnQl9f36INGzZU/TwHDx7kpJNOqv75Z9JM9bb9+y8f1vi+WfDCTya/\n3oVz3zD5hYzS1NezqX1Bc3tral9w5PZ24YUXPpaZ/RONq/5q9Ig4Cfgy8P7M/GE57dBxaIdadlGv\nlplrgDUA/f39OTAwUDXf4OAgtWNn2kz1drhfc75y4TC3bp/8N+rvumpg0ssYramvZ1P7gub21tS+\nwN6qrp6KiONoBcbnMvMrpfxCObREud9X6ruBM9pmnwfsmaA+r0N9vHVIknqg5uqpAO4AnsrMf2x7\naiMwcgXUcuCetvrV5SqqxcDLmbkX2AxcHBGzywnwi4HN5blXImJxWdfVo5bVaR2SpB6oOc5wAfBu\nYHtEPF5qfwOsBu6KiOuA54ArynObgKXAEPBj4FqAzNwfEbcAj5ZxH87M/WX6euBOYBZwX7kxzjok\nST0wYWiUE9pjncC4qMP4BG4YY1lrgbUd6ttonVwfXf9Bp3VIknrDT4RLkqpN/jIYTYn5o65iWrlw\n+LCvbJKk6eaehiSpmqEhSapmaEiSqhkakqRqhoYkqZqhIUmqZmhIkqoZGpKkaoaGJKmaoSFJqmZo\nSJKqGRqSpGqGhiSpmqEhSapmaEiSqhkakqRqhoYkqZqhIUmqZmhIkqoZGpKkaoaGJKmaoSFJqmZo\nSJKqGRqSpGqGhiSpmqEhSapmaEiSqhkakqRqhoYkqZqhIUmqZmhIkqoZGpKkaoaGJKmaoSFJqmZo\nSJKqGRqSpGqGhiSp2oShERFrI2JfROxoq30oIr4fEY+X29K25z4QEUMR8XREXNJWX1JqQxGxqq1+\nZkQ8HBE7I+KLEXF8qZ9QHg+V5+dP1Q8tSepOzZ7GncCSDvVPZOY55bYJICLOAq4E3lrm+eeIOCYi\njgE+BVwKnAW8q4wF+FhZ1gLgAHBdqV8HHMjMXwc+UcZJknpowtDIzAeA/ZXLWwZsyMyfZuazwBBw\nXrkNZeYzmfkzYAOwLCICeDtwd5l/HXB527LWlem7gYvKeElSjxw7iXlvjIirgW3Aysw8AMwFHmob\ns7vUAJ4fVT8feCPwUmYOdxg/d2SezByOiJfL+BdHNxIRK4AVAH19fQwODlb9AAcPHqweO91WLhw+\n5HHfrNfWmmCq+pqO7d6k17NdU/uC5vbW1L7A3roNjduBW4As97cC7wE67QkknfdocpzxTPDcocXM\nNcAagP7+/hwYGBin9VcNDg5SO3a6XbPq3kMer1w4zK3bJ5Pp02Oq+tp11cDkmxmlSa9nu6b2Bc3t\nral9gb11dfVUZr6QmT/PzF8An6F1+AlaewpntA2dB+wZp/4icEpEHDuqfsiyyvNvoP4wmSRpGnQV\nGhExp+3hnwAjV1ZtBK4sVz6dCSwAHgEeBRaUK6WOp3WyfGNmJnA/8M4y/3LgnrZlLS/T7wS+UcZL\nknpkwuMMEfEFYAA4LSJ2AzcDAxFxDq3DRbuAPwPIzCcj4i7gO8AwcENm/rws50ZgM3AMsDYznyyr\nuAnYEBEfAb4F3FHqdwCfjYghWnsYV076p1VjzB91OG4qrFw4/JrDfJ3sWn3ZlK9bOlpMGBqZ+a4O\n5Ts61EbGfxT4aIf6JmBTh/ozvHp4q73+P8AVE/UnSZo5fiJcklTN0JAkVTM0JEnVDA1JUjVDQ5JU\nzdCQJFUzNCRJ1QwNSVI1Q0OSVM3QkCRVMzQkSdUMDUlSNUNDklTN0JAkVTM0JEnVDA1JUjVDQ5JU\nzdCQJFUzNCRJ1QwNSVI1Q0OSVM3QkCRVMzQkSdUMDUlStWN73YA00+avundG17dy4TDXrLqXXasv\nm9H1StPBPQ1JUjVDQ5JUzdCQJFUzNCRJ1QwNSVI1Q0OSVM3QkCRVMzQkSdUMDUlSNUNDklTN0JAk\nVTM0JEnVDA1JUjVDQ5JUbcLQiIi1EbEvIna01U6NiC0RsbPczy71iIjbImIoIp6IiHPb5llexu+M\niOVt9UURsb3Mc1tExHjrkCT1Ts2exp3AklG1VcDWzFwAbC2PAS4FFpTbCuB2aAUAcDNwPnAecHNb\nCNxexo7Mt2SCdUiSemTC0MjMB4D9o8rLgHVleh1weVt9fbY8BJwSEXOAS4Atmbk/Mw8AW4Al5bmT\nM/PBzExg/ahldVqHJKlHuj2n0ZeZewHK/emlPhd4vm3c7lIbr767Q328dUiSemSq/9xrdKhlF/XD\nW2nEClqHuOjr62NwcLBqvoMHD1aPnW4rFw4f8rhv1mtrTdDUvqC5vY301ZR/a+2a9B5o19S+wN66\nDY0XImJOZu4th5j2lfpu4Iy2cfOAPaU+MKo+WOrzOowfbx2vkZlrgDUA/f39OTAwMNbQQwwODlI7\ndrpdM+rvVq9cOMyt25v3J9yb2hc0t7eRvnZdNdDrVl6jSe+Bdk3tC+yt28NTG4GRK6CWA/e01a8u\nV1EtBl4uh5Y2AxdHxOxyAvxiYHN57pWIWFyumrp61LI6rUOS1CMT/rcsIr5Aay/htIjYTesqqNXA\nXRFxHfAccEUZvglYCgwBPwauBcjM/RFxC/BoGffhzBw5uX49rSu0ZgH3lRvjrEOS1CMThkZmvmuM\npy7qMDaBG8ZYzlpgbYf6NuDsDvUfdFqHJKl3/ES4JKmaoSFJqmZoSJKqGRqSpGqGhiSpmqEhSapm\naEiSqhkakqRqhoYkqZqhIUmqZmhIkqoZGpKkaoaGJKmaoSFJqta8P3PWQ/NH/fU8SdKh3NOQJFUz\nNCRJ1QwNSVI1Q0OSVM3QkCRVMzQkSdUMDUlSNUNDklTN0JAkVTM0JEnVDA1JUjW/e0qaIb38brNd\nqy/r2bp1ZHFPQ5JUzdCQJFUzNCRJ1QwNSVI1Q0OSVM3QkCRVMzQkSdUMDUlSNUNDklTNT4RLR4Gx\nPo2+cuEw10zjJ9X9JPqRxz0NSVI1Q0OSVG1SoRERuyJie0Q8HhHbSu3UiNgSETvL/exSj4i4LSKG\nIuKJiDi3bTnLy/idEbG8rb6oLH+ozBuT6VeSNDlTsadxYWaek5n95fEqYGtmLgC2lscAlwILym0F\ncDu0Qga4GTgfOA+4eSRoypgVbfMtmYJ+JUldmo7DU8uAdWV6HXB5W319tjwEnBIRc4BLgC2ZuT8z\nDwBbgCXluZMz88HMTGB927IkST0w2dBI4OsR8VhErCi1vszcC1DuTy/1ucDzbfPuLrXx6rs71CVJ\nPTLZS24vyMw9EXE6sCUi/nucsZ3OR2QX9dcuuBVYKwD6+voYHBwct+kRBw8ePGTsyoXDVfPNhL5Z\nzepnRFP7gub21tS+YPp7q30vjjb6vdkkR3tvkwqNzNxT7vdFxFdpnZN4ISLmZObecohpXxm+Gzij\nbfZ5wJ5SHxhVHyz1eR3Gd+pjDbAGoL+/PwcGBjoNe43BwUHax07n9eqHa+XCYW7d3ryP0TS1L2hu\nb03tC6a/t11XDXQ13+j3ZpMc7b11fXgqIk6MiNePTAMXAzuAjcDIFVDLgXvK9Ebg6nIV1WLg5XL4\najNwcUTMLifALwY2l+deiYjF5aqpq9uWJUnqgcn8F6MP+Gq5CvZY4POZ+e8R8ShwV0RcBzwHXFHG\nbwKWAkPAj4FrATJzf0TcAjxaxn04M/eX6euBO4FZwH3lJknqka5DIzOfAX67Q/0HwEUd6gncMMay\n1gJrO9S3AWd326MkaWo180CrJE3SWN+3NVkTfV/Xkf59W36NiCSpmqEhSapmaEiSqhkakqRqhoYk\nqZqhIUmqZmhIkqoZGpKkaoaGJKmanwiXNG26/VT2RJ+6Vu+4pyFJqmZoSJKqGRqSpGqGhiSpmqEh\nSapmaEiSqhkakqRqhoYkqZqhIUmqZmhIkqoZGpKkaoaGJKmaoSFJqmZoSJKqGRqSpGqGhiSpmqEh\nSapmaEiSqhkakqRqhoYkqZqhIUmqZmhIkqoZGpKkaoaGJKmaoSFJqmZoSJKqGRqSpGqGhiSpWuND\nIyKWRMTTETEUEat63Y8kHc2O7XUD44mIY4BPAX8E7AYejYiNmfmd3nYmSZ3NX3Vvz9Z955ITp30d\nTd/TOA8YysxnMvNnwAZgWY97kqSjVtNDYy7wfNvj3aUmSeqByMxe9zCmiLgCuCQz/7Q8fjdwXmb+\n+ahxK4AV5eFvAE9XruI04MUpaneqNbW3pvYFze2tqX1Bc3tral9w5Pb2q5n5pokGNfqcBq09izPa\nHs8D9owelJlrgDWHu/CI2JaZ/d23N32a2ltT+4Lm9tbUvqC5vTW1L7C3ph+eehRYEBFnRsTxwJXA\nxh73JElHrUbvaWTmcETcCGwGjgHWZuaTPW5Lko5ajQ4NgMzcBGyapsUf9iGtGdTU3praFzS3t6b2\nBc3tral9wVHeW6NPhEuSmqXp5zQkSQ1y1IZGL76eJCJ2RcT2iHg8IraV2qkRsSUidpb72aUeEXFb\n6e+JiDi3bTnLy/idEbG8y17WRsS+iNjRVpuyXiJiUflZh8q8MYm+PhQR3y/b7fGIWNr23AfKOp6O\niEva6h1f33JRxcOl3y+WCyxq+jojIu6PiKci4smIeF+DttlYvTVhu70uIh6JiG+X3v5+vOVFxAnl\n8VB5fn63PXfZ150R8WzbNjun1Gfs9SzzHhMR34qIrzVhex0iM4+6G62T6t8D3gwcD3wbOGsG1rsL\nOG1U7ePAqjK9CvhYmV4K3AcEsBh4uNRPBZ4p97PL9OwuenkbcC6wYzp6AR4Bfq/Mcx9w6ST6+hDw\nVx3GnlVeuxOAM8tresx4ry9wF3Blmf40cH1lX3OAc8v064HvlvU3YZuN1VsTtlsAJ5Xp44CHy/bo\nuDzgvcCny/SVwBe77bnLvu4E3tlh/Iy9nmXevwQ+D3xtvO0/U9ur/Xa07mk06etJlgHryvQ64PK2\n+vpseQg4JSLmAJcAWzJzf2YeALYASw53pZn5ALB/Onopz52cmQ9m61/w+rZlddPXWJYBGzLzp5n5\nLDBE67Xt+PqW/+m9Hbi7w884UV97M/ObZfoV4Cla307QhG02Vm9jmcntlpl5sDw8rtxynOW1b8+7\ngYvK+g+r50n0NZYZez0jYh5wGfAv5fF4239Gtle7ozU0evX1JAl8PSIei9an2AH6MnMvtN78wOkT\n9DidvU9VL3PL9FT2eGM5LLA2yiGgLvp6I/BSZg5Ppq9yCOB3aP3vtFHbbFRv0IDtVg61PA7so/VL\n9XvjLO+XPZTnXy7rn/L3w+i+MnNkm320bLNPRMQJo/uqXP9kXs9PAn8N/KI8Hm/7z9j2GnG0hkan\nY4szcRnZBZl5LnApcENEvG2csWP12IveD7eXqe7xduDXgHOAvcCtveorIk4Cvgy8PzN/ON7QBvTW\niO2WmT/PzHNofaPDecBbxlnejPU2uq+IOBv4APCbwO/SOuR000z2FRHvAPZl5mPt5XGWNeP/zo7W\n0Kj6epKplpl7yv0+4Ku03kAvlF1Zyv2+CXqczt6nqpfdZXpKeszMF8ob/BfAZ2htt276epHWYYVj\nR9WrRMRxtH4pfy4zv1LKjdhmnXprynYbkZkvAYO0zgmMtbxf9lCefwOtw5XT9n5o62tJOdSXmflT\n4F/pfpt1+3peAPxxROyidejo7bT2PBqzvab1xG9Tb7Q+1PgMrRNEIyeD3jrN6zwReH3b9H/ROhfx\nDxx6IvXjZfoyDj3x9ki+euLtWVon3WaX6VO77Gk+h55wnrJeaH0FzGJePQm4dBJ9zWmb/gtax2oB\n3sqhJ/ueoXWib8zXF/gSh55QfG9lT0HruPQnR9V7vs3G6a0J2+1NwCllehbwH8A7xloecAOHnti9\nq9ueu+xrTts2/SSwuhfvgTL/AK+eCO/p9jqkr25+2RwJN1pXQ3yX1vHVD87A+t5cXqBvA0+OrJPW\n8cetwM5yP/IPLmj9AarvAduB/rZlvYfWia0h4Nou+/kCrUMW/0vrfx/XTWUvQD+wo8zzT5QPknbZ\n12fLep+g9d1j7b8MP1jW8TRtV6eM9fqW1+GR0u+XgBMq+/p9WrvxTwCPl9vShmyzsXprwnb7LeBb\npYcdwN+NtzzgdeXxUHn+zd323GVf3yjbbAfwb7x6hdWMvZ5t8w/wamj0dHu13/xEuCSp2tF6TkOS\n1AVDQ5JUzdCQJFUzNCRJ1QwNSVI1Q0OSVM3QkCRVMzQkSdX+D8njy/fj+6PsAAAAAElFTkSuQmCC\n",
+      "text/plain": [
+       "<Figure size 432x288 with 1 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "frame_completed.loan_amnt.hist()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(958391, 157)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "frame_completed.shape"
+   ]
   },
   {
    "cell_type": "code",
